k8s/frontend/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: total-client
  namespace: frontend
  labels:
    app: total-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: total-client
  template:
    metadata:
      labels:
        app: total-client
    spec:
      # Karpenter 스팟 인스턴스로 라우팅
      nodeSelector:
        karpenter.sh/capacity-type: spot

      # AZ-A, AZ-C 가용영역별 1:1 균등 분산 배치
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: total-client 
               
      serviceAccountName: total-client-sa
      containers:
        - name: web
          image: 596601390909.dkr.ecr.ap-northeast-2.amazonaws.com/kurly-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
---
apiVersion: v1
kind: Service
metadata:
  name: total-client
  namespace: frontend
  labels:
    app: total-client
spec:
  selector:
    app: total-client
  ports:
    - name: http
      port: 80
      targetPort: http
