k8s/frontend/frontend-ingress.yaml
# 메인 서비스 진입로 Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: total-client-ingress
  namespace: frontend
  annotations:
    # alb.ingress.kubernetes.io/load-balancer-name: "main-test-alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:596601390909:certificate/30f62fc0-4cb0-4201-990f-6ad487fa7240"
    alb.ingress.kubernetes.io/group.name: "main-alb-group"
    alb.ingress.kubernetes.io/group.order: "10"  # 우선순위 10
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  ingressClassName: alb
  rules:
    - host: "cloudyim.store"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: total-client
                port:
                  number: 80
